--- a/app/views/notifier/registration_confirmed.en.text.erb
+++ b/app/views/notifier/registration_confirmed.en.text.erb
@@ -2,6 +2,7 @@ Dear <%= @full_name %>,
 
 I hereby confirm that you are now fully signed up for the workshop <%= @event %>.
 
+<% if Site.de? %>
 Closer to the workshop date I will send out more detailed workshop
 information - in case you need that NOW or have other urgent questions,
 please feel free to contact me:
@@ -11,5 +12,14 @@ via phone +49 40 2261 2948
 
 I am looking forward to get to know you at the workshop - or to see you again!
 
-Kind regards
+Kind regards,
 Mikki Kitz, the producer of the HAI WS in Germany
+<% elsif Site.uk? %>
+Closer to the workshop date I will send out more detailed workshop
+information.
+
+I am looking forward to get to know you at the workshop - or to see you again!
+
+Kind regards,
+UK Producer of the HAI Workshops
+<% end %>
