--- a/app/views/public_signups/_form.html.haml
+++ b/app/views/public_signups/_form.html.haml
@@ -3,7 +3,7 @@
     #error_explanation
       %h2= t('enums.error')
       = debug(@public_signup.errors) if Rails.env.development?
-  - else
+  - elsif Site.de?
     %p#lang
       - if german?
         If you prefer you may #{link_to('register in English.', :action => :new, :locale => :en)}
@@ -17,7 +17,7 @@
     = render 'registration_form', :r => r
 
   = f.inputs do
-    = render 'instructions', :instructions => 'summary'
+    = render 'instructions', :instructions => 'summary' if Site.de?
     = f.input :terms_and_conditions, options_for_terms_and_conditions(f)
 
   = f.buttons
