--- a/app/views/public_signups/de/_registration_form.html.haml
+++ b/app/views/public_signups/de/_registration_form.html.haml
@@ -14,25 +14,24 @@
     = a.input :mobile_phone,  :input_html => {:size => 20}
     = a.input :work_phone,  :input_html => {:size => 20}
 
-  = render 'instructions', :instructions => 'options'
+  = render_instructions('options')
   = r.input :special_diet, options_for_special_diet(r)
-  - if Site.de?
-    = r.input :backjack_rental, options_for_backjack_rental(r)
-    = r.input :sunday_choice, options_for_sunday_choice(r)
+  = r.input :backjack_rental, options_for_backjack_rental(r)
+  = r.input :sunday_choice, options_for_sunday_choice(r)
   = r.input :lift, options_for_lift(r)
 
-  - if german?
-    = render 'instructions', :instructions => 'payment'
+  - if language?(:de)
+    = render_instructions('payment')
     = r.input :payment_method, options_for_payment_method(r)
     #post
-      = render 'instructions', :instructions => 'payment1'
+      = render_instructions('payment1')
     = r.inputs :id => 'internet' do
       = r.input :bank_account_name,  :input_html => {:size => 30}
-      = r.input :bank_account_nr,  :input_html => {:size => 10}
-      = r.input :bank_name,  :input_html => {:size => 30}
-      = r.input :bank_sort_code,  :input_html => {:size => 10}
+      = r.input :bank_account_nr,  :input_html => {:size => 20}
+      = r.input :bank_name,  :input_html => {:size => 50}
+      = r.input :bank_sort_code,  :input_html => {:size => 20}
 
-  = render 'instructions', :instructions => 'note'
+  = render_instructions('note')
   = r.input :notes, options_for_note(r)
 
 - content_for :javascript do
