--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -5,10 +5,14 @@
     %meta{:content => "text/html; charset=US-ASCII", "http-equiv" => "Content-Type"}
     %title
       HAI UK Home - Love, Intimacy and Sexuality Workshops in the UK
-    %link{:href => "http://www.hai-uk.org.uk/style.css", :rel => "stylesheet", :type => "text/css"}
-    %link{:href => "http://www.hai-uk.org.uk/colour.css", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "http://www.hai-uk.org.uk/style/style.css", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "http://www.hai-uk.org.uk/style/colour.css", :rel => "stylesheet", :type => "text/css"}
     %meta{:content => "HAI UK, love, intimacy, sexuality, workshops, hugging, hugs, closeness, community, togetherness", :name => "keywords"}
     %meta{:content => "The Human Awareness Institute (HAI) empowers individuals to be potent, loving, contributing human beings. HAI promotes personal growth and social evolution by replacing ignorance and fear with awareness and love.", :name => "description"}
+    = javascript_include_tag :defaults
+    = formtastic_stylesheet_link_tag
+    = stylesheet_link_tag 'public_signup', 'uk/public_signup', :media => 'all'
+    = csrf_meta_tag
   %body
     #main
       #logo
@@ -57,6 +61,17 @@
               %p
                 Charity registration number 1128261
         #column2
-          = yield
+          #haidbcontainer
+            #flash{ :'padding-left' => '60px' }
+              - flash.each do |key, value|
+                %div{ :class => "flash #{key}" }
+                  = value
+
+            #haidbcontent
+              = yield
+            .clear
+
+            = debug(params) if Rails.env.development?
+
       #footer
         creating a world where everyone wins
