--- a/app/views/office/registrations/roster/index.pdf.haml
+++ b/app/views/office/registrations/roster/index.pdf.haml
@@ -1,1 +1,5 @@
+- if Site.de?
+  - @warning = ["Diese Liste ist vertraulich - bitte sicher aufbewahren und NUR für private Zwecke benutzen.", "This list is confidential - store if safely and use it ONLY for private matters."]
+- else
+  - @warning = ["This list is confidential - store if safely and use it ONLY for private matters."]
 = roster_pdf
