--- a/app/views/public_signups/de/_registration_form.html.haml
+++ b/app/views/public_signups/de/_registration_form.html.haml
@@ -14,24 +14,24 @@
     = a.input :mobile_phone,  :input_html => {:size => 20}
     = a.input :work_phone,  :input_html => {:size => 20}
 
-  = render_instructions('options')
+  .instructions= _('public_signup.form.workshop_information')
   = r.input :special_diet, options_for_special_diet(r)
   = r.input :backjack_rental, options_for_backjack_rental(r)
   = r.input :sunday_choice, options_for_sunday_choice(r)
   = r.input :lift, options_for_lift(r)
 
   - if language?(:de)
-    = render_instructions('payment')
+    .instructions= _('public_signup.form.payment')
     = r.input :payment_method, options_for_payment_method(r)
     #post
-      = render_instructions('payment1')
+      .instructions= _('public_signup.form.payment_by_post')
     = r.inputs :id => 'internet' do
       = r.input :bank_account_name,  :input_html => {:size => 30}
       = r.input :bank_account_nr,  :input_html => {:size => 20}
       = r.input :bank_name,  :input_html => {:size => 50}
       = r.input :bank_sort_code,  :input_html => {:size => 20}
 
-  = render_instructions('note')
+  .instructions= _('public_signup.form.note')
   = r.input :notes, options_for_note(r)
 
 - content_for :javascript do
