avoid blank area

--- a/app/views/public_signups/uk/new.html.haml
+++ b/app/views/public_signups/uk/new.html.haml
@@ -13,7 +13,7 @@
     = render 'public_signups/uk/registration_form', :r => r
 
   = f.inputs do
-    - if _('public_signup.form.conditions')
+    - if _('public_signup.form.conditions').present?
       .instructions= _('public_signup.form.conditions')
 
     = f.input :terms_and_conditions, options_for_terms_and_conditions(f)
