--- a/app/views/office/registrations/roster/index.html.haml
+++ b/app/views/office/registrations/roster/index.html.haml
@@ -14,6 +14,6 @@
           The PDF file will have a password of
           %em#password= @password
 
-      = render "registrations", :registrations => registrations
+      = render "registrations", :registrations => registrations.completed
 
   = block_footer(registration_submodule_breadcrumbs << ['Roster'])
