removed ekuseru (excel spreadsheet), made csv instead spreadsheet had problems with encodings. csv is simpler.

--- a/app/views/office/registrations/index.html.haml
+++ b/app/views/office/registrations/index.html.haml
@@ -7,7 +7,7 @@
 
     = controls do |c|
       - add_button_to(c, "VCards", params.merge(:format => :vcard, :icon => 'vcard'))
-      - add_button_to(c, "XLS", params.merge(:format => :xls, :icon => 'page_excel'))
+      - add_button_to(c, "CSV", params.merge(:format => :csv, :icon => 'page_excel'))
 
 
     %h2
