--- a/app/views/office/events/show.html.haml
+++ b/app/views/office/events/show.html.haml
@@ -10,6 +10,8 @@
 
     .inner
       = render 'event', :event => event
+      - if event.audits.any?
+        = render 'office/shared/audits', :audits => event.audits.descending
 
     = controls do |c|
       - c.item 'Show Registrations', office_event_registrations_path(event), :icon => :group_go
