--- a/app/views/office/public_signups/_public_signup.html.haml
+++ b/app/views/office/public_signups/_public_signup.html.haml
@@ -7,4 +7,9 @@
   = attr.attributes :html => {:class => :column3} do
     = attr.attribute :special_requests, :value => registration_requests(r)
     = attr.attribute :notes
+  .wat-cf
+  = attr.attributes :html => {:class => :column} do
+    = attr.attribute :how_hear
+  = attr.attributes :html => {:class => :column} do
+    = attr.attribute :previous_event
 .wat-cf
