--- a/app/views/office/registrations/_fields_payment.html.haml
+++ b/app/views/office/registrations/_fields_payment.html.haml
@@ -6,3 +6,4 @@
 = form.inputs :class => :column_right do
   = form.input :bank_name,  :input_html => {:size => 30}
   = form.input :bank_sort_code,  :input_html => {:size => 10}
+.wat-cf
