--- a/app/views/office/events/_registrations.html.haml
+++ b/app/views/office/events/_registrations.html.haml
@@ -3,13 +3,21 @@
     %tr
       %th.name Name
       %th Notes
-      %th.center= "Checked&nbsp;In".html_safe
-      %th.center Completed
+      - if event.start_date.past?
+        %th.center= "Checked&nbsp;In".html_safe
+        %th.center Completed
+      - elsif Site.uk?
+        %th.center Clothing Optional Talk
+        %th.center Reg Fee Paid
   %tbody
     - registrations.each do |r|
       %tr{:class => cycle(:odd, :even)}
         %td.name= link_to(r.full_name, [:office, r.angel])
         %td= r.notes
-        %td.center= color_dot(r.checked_in?)
-        %td.center= color_dot(r.completed?)
+        - if event.start_date.past?
+          %td.center= color_dot(r.checked_in?)
+          %td.center= color_dot(r.completed?)
+        - elsif Site.uk?
+          %td.center= color_dot(r.clothing_conversation?)
+          %td.center= color_dot(r.reg_fee_received?)
 .wat-cf
