--- a/app/views/office/registrations/_form.html.haml
+++ b/app/views/office/registrations/_form.html.haml
@@ -13,13 +13,21 @@
     = r.input :role, options_for_role(r)
   .wat-cf
 
-  = render 'office/registrations/fields_payment', :form => r
+  = render('office/registrations/fields_payment', :form => r) if Site.de?
   = render 'office/registrations/fields_requests', :form => r
   = render 'office/registrations/field_note', :form => r
     
-  = r.inputs do
+  - if Site.uk?
+    = r.inputs :class => :column do
+      = r.input :clothing_conversation
+    = r.inputs :class => :column do
+      = r.input :reg_fee_received
+
+  = r.inputs :class => :column do
     = r.input :checked_in
+  = r.inputs :class => :column do
     = r.input :completed
+  .wat-cf
 
   = r.buttons do
     = r.commit_button
