only show tables with content

--- a/app/views/office/registrations/index.html.haml
+++ b/app/views/office/registrations/index.html.haml
@@ -15,6 +15,6 @@
       for #{parent.display_name}
 
     .inner
-      = render 'registrations', :registrations => registrations
+      = render 'registrations', :registrations => registrations if registrations.any?
 
   = block_footer(registration_breadcrumbs)
