--- a/app/views/office/registrations/_registrations.html.haml
+++ b/app/views/office/registrations/_registrations.html.haml
@@ -3,10 +3,10 @@
 
 - path = "#{path}/registrations"
 %h3= pluralize(registrations.participants.count, "Participant Registration")
-= render path, :registrations => registrations.participants
+= render path, :registrations => registrations.participants if registrations.participants.any?
 
 %h3= pluralize(registrations.team.count, "Team Registration")
-= render path, :registrations => registrations.team
+= render path, :registrations => registrations.team if registrations.team.any?
 
 %h3= pluralize(registrations.facilitators.count, "Facilitator Registration")
-= render path, :registrations => registrations.facilitators
+= render path, :registrations => registrations.facilitators if registrations.facilitators.any?
