--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -9,6 +9,7 @@
     %link{:href => "http://www.hai-uk.org.uk/style/colour.css", :rel => "stylesheet", :type => "text/css"}
     %meta{:content => "HAI UK, love, intimacy, sexuality, workshops, hugging, hugs, closeness, community, togetherness", :name => "keywords"}
     %meta{:content => "The Human Awareness Institute (HAI) empowers individuals to be potent, loving, contributing human beings. HAI promotes personal growth and social evolution by replacing ignorance and fear with awareness and love.", :name => "description"}
+    %link{href:"/favicon-uk.ico", rel:"shortcut icon"}
     = javascript_include_tag :defaults
     = formtastic_stylesheet_link_tag
     = stylesheet_link_tag 'public_signup', 'uk/public_signup', :media => 'all'
