--- a/app/views/office/public_signups/index.html.haml
+++ b/app/views/office/public_signups/index.html.haml
@@ -1,5 +1,5 @@
 .block
-  = block_navigation([['Pending Approval', :index], ['Approved', :approved]])
+  = block_navigation([['Pending Approval', :index], ['Waitlisted', :waitlisted], ['Approved', :approved]])
 
   .content
     = controls do |c|
