ref resources locally, not not via http
avoids problems with https => http requests

--- a/app/views/layouts/de_site.html.haml
+++ b/app/views/layouts/de_site.html.haml
@@ -7,8 +7,8 @@
     %meta{:content => "Mikki Kitz", :name => "author"}
     %meta{:content => "Begegnungen in Liebe und Toleranz", :name => "description"}
     %meta{:content => "Liebe, Nähe, Sexualität, Workshops, Veranstaltungen, HAI, Human Awareness Institute, Hand on Heart , Verein, Partnerschaft, Paare, Singles, Selbsterfahrung, Bewußtheit, Therapie, Intimität, Netzwerk, gemeinnützig, Information, Berührung, Stan Dale, Tantra, Selbsterfahrungsworkshops, Paarworkshops, Singleworkshops, Kommunikation, Kommunikationstraining, Life Coaching, sexuelle Probleme, Beziehungsprobleme, Beziehungen, Einsamkeit, Toleranz, Lust, Frauen, Männer, Homosexualität, Bisexualität, Polyamorie, Polyamory, Sinnlichkeit, Wissen, Forschung, Achtsamkeit, Begegnungen, Beratung, Körperkontakt, Herz, Wegweiser, international, Erotik, Leidenschaft, Kontakt, Körper, Körperarbeit, Gefühle", :name => "keywords"}
-    %link{:href => "http://www.liebstduschon.de/lds/tpl/lds.css", :rel => "stylesheet", :type => "text/css"}
-    %link{:href => "http://www.liebstduschon.de/lds/tpl/lds.ico", :rel => "shortcut icon"}
+    %link{:href => "/stylesheets/de/lds.css", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "/favicon-de.ico", :rel => "shortcut icon"}
     :javascript
       window["_GOOG_TRANS_EXT_VER"] = "1"
     = javascript_include_tag :defaults
@@ -17,7 +17,7 @@
     = csrf_meta_tag
   %body
     %div{:style => "position: fixed; left:20px; top:27px;z-index:2"}
-      %img{:alt => "blume", :src => "http://www.liebstduschon.de/lds/tpl/blume.png"}
+      %img{:alt => "blume", :src => "/images/de/blume.png"}
     #header
       #titel www.liebstduschon.de
     #navmenu
@@ -52,7 +52,7 @@
           %tr
             %td.tdmenu{:colspan => "2"}
               %a.amenu{:href => "http://www.liebstduschon.de/lds/index.php?id=9x0"}
-                %img{:alt => "liebay", :border => "0", :src => "http://www.liebstduschon.de/lds/tpl/liebay.png"}/
+                %img{:alt => "liebay", :border => "0", :src => "/images/de/liebay.png"}/
           %tr
             %td.tdopen{:colspan => "2"}
               %a.amenuactiv{:href => "https://haidb.heroku.com/de/public_signups/new"} Anmeldung / Signup
