--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -5,8 +5,8 @@
     %meta{:content => "text/html; charset=US-ASCII", "http-equiv" => "Content-Type"}
     %title
       HAI UK Home - Love, Intimacy and Sexuality Workshops in the UK
-    %link{:href => "http://www.hai-uk.org.uk/style/style.css", :rel => "stylesheet", :type => "text/css"}
-    %link{:href => "http://www.hai-uk.org.uk/style/colour.css", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "/stylesheets/uk/style.css", :rel => "stylesheet", :type => "text/css"}
+    %link{:href => "/stylesheets/uk/colour.css", :rel => "stylesheet", :type => "text/css"}
     %meta{:content => "HAI UK, love, intimacy, sexuality, workshops, hugging, hugs, closeness, community, togetherness", :name => "keywords"}
     %meta{:content => "The Human Awareness Institute (HAI) empowers individuals to be potent, loving, contributing human beings. HAI promotes personal growth and social evolution by replacing ignorance and fear with awareness and love.", :name => "description"}
     %link{href:"/favicon-uk.ico", rel:"shortcut icon"}
