--- a/app/views/office/angels/_angel.html.haml
+++ b/app/views/office/angels/_angel.html.haml
@@ -6,7 +6,7 @@
     = attr.attribute :gender
     = attr.attribute :address, :value => compact_address(angel)
   = attr.attributes :html => {:class => :column} do
-    = attr.attribute :email, :value => auto_link(angel.email)
+    = attr.attribute :email, :value => angel.email
   = attr.attributes :html => {:class => :column3} do
     = attr.attribute :notes
   - if local_assigns.has_key? :show_highest_level
