--- a/app/views/office/angels/_level.html.haml
+++ b/app/views/office/angels/_level.html.haml
@@ -10,7 +10,7 @@
     - angels.each do |a|
       %tr{:class => cycle(:odd, :even)}
         %td= a.full_name
-        %td= auto_link(a.email)
+        %td= a.email
         %td= a.highest_level
         %td= a.registrations.ok.count
         %td= link_to_show(office_angel_path(a))
