--- a/app/views/layouts/de_site.html.haml
+++ b/app/views/layouts/de_site.html.haml
@@ -11,8 +11,7 @@
     %link{:href => "/favicon-de.ico", :rel => "shortcut icon"}
     :javascript
       window["_GOOG_TRANS_EXT_VER"] = "1"
-    = javascript_include_tag :defaults
-    = formtastic_stylesheet_link_tag
+    = javascript_include_tag "application"
     = stylesheet_link_tag 'public_signup', :media => 'all'
     = csrf_meta_tag
   %body
