moving js and css assets into app/assets

--- a/app/views/layouts/de_site.html.haml
+++ b/app/views/layouts/de_site.html.haml
@@ -12,7 +12,7 @@
     :javascript
       window["_GOOG_TRANS_EXT_VER"] = "1"
     = javascript_include_tag "application"
-    = stylesheet_link_tag 'public_signup', :media => 'all'
+    = stylesheet_link_tag 'application'
     = csrf_meta_tag
   %body
     %div{:style => "position: fixed; left:20px; top:27px;z-index:2"}
