reference uk specific stylesheet directly

--- a/app/views/layouts/uk_site.html.haml
+++ b/app/views/layouts/uk_site.html.haml
@@ -11,7 +11,8 @@
     %meta{:content => "The Human Awareness Institute (HAI) empowers individuals to be potent, loving, contributing human beings. HAI promotes personal growth and social evolution by replacing ignorance and fear with awareness and love.", :name => "description"}
     %link{href:"/favicon-uk.ico", rel:"shortcut icon"}
     = javascript_include_tag "application"
-    = stylesheet_link_tag 'public_signup', 'uk/public_signup', :media => 'all'
+    = stylesheet_link_tag 'application'
+    %link{:href => "/stylesheets/uk/public_signup.css", :rel => "stylesheet", :type => "text/css"}
     = csrf_meta_tag
   %body
     #main
